// Vitest Snapshot v1

exports[`umami <CatchAllRoute /> > should render a page 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <article
        class="prose lg:prose-xl mt-10 mx-auto"
      >
        <h1>
          Top Level Page
        </h1>
        <a
          class="font-normal"
          href="/pages"
        >
          Pages →
        </a>
        <div
          class="mt-12 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        >
          <div>
            <p>
              This is an about page. It should be available as a top level route like 
              <code>
                /about
              </code>
              .
            </p>
            

          </div>
        </div>
      </article>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`umami <CatchAllRoute /> > should render a recipe 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <article
        class="prose lg:prose-xl mt-10 mx-auto h-fit p-4 sm:p-0"
      >
        <header>
          <h1>
            Guacamole
          </h1>
          <div
            class="flex flex-row justify-between"
          >
            <a
              class="font-normal"
              href="/recipes"
            >
              Recipes →
            </a>
            <span
              class="text pb-2 pr-3 text-sm text-slate-400"
            >
              Snacks
            </span>
          </div>
        </header>
        <div
          class="relative max-w-lg mx-auto min-w-full h-[50vh] rounded-lg shadow-lg overflow-hidden mt-12 mb-10"
        >
          <img
            alt="Guacamole"
            src="https://umami/sites/default/files/2022-07/guacamole.jpeg"
          />
        </div>
        <div
          class="flex flex-col sm:flex-row"
        >
          <section
            class="flex flex-col min-w-fit sm:border-r-2 pr-4"
          >
            <h2>
              Ingredients
            </h2>
            <ul>
              <li>
                1 Avocado
              </li>
              <li>
                1/2 tomato
              </li>
              <li>
                1/2 onion
              </li>
              <li>
                salt
              </li>
              <li>
                lime
              </li>
              <li>
                black pepper
              </li>
              <li>
                cilantro
              </li>
            </ul>
          </section>
          <section
            class="flex flex-col pl-4"
          >
            <h2
              class="ml-4"
            >
              Directions
            </h2>
            <div>
              <ol>
                
	
                <li>
                  Dice the onion and tomato
                </li>
                
	
                <li>
                  Scoop the avocado insides into a bowl
                </li>
                
	
                <li>
                  Add the tomato, onion, cilantro, lime juice, salt, and pepper
                </li>
                
	
                <li>
                  Mix together
                </li>
                
	
                <li>
                  Serve
                </li>
                

              </ol>
              

            </div>
          </section>
        </div>
      </article>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`umami <CatchAllRoute /> > should render an article 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <article
        class="prose lg:prose-xl mt-10 mx-auto"
      >
        <h1>
          Example Top Level Article
        </h1>
        <a
          class="font-normal"
          href="/"
        >
          Home →
        </a>
        <div
          class="mt-12 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        >
          <div
            class="relative w-full rounded-lg shadow-lg overflow-hidden mb-10"
            style="height: 50vh;"
          >
            <img
              alt="Example Top Level Article"
              src="https://umami/sites/default/files/2022-07/kitties.jpg"
            />
          </div>
          <div>
            <h2>
              Nonummy Tristique Pulvinar Justo Primis Mi
            </h2>
            


            <h3>
              Ultricies Velit Dapibus Cursus Proin Magnis
            </h3>
            


            <p>
              Est varius. Conubia semper facilisis primis urna nec dis placerat dictum interdum dapibus dictumst phasellus phasellus neque dui posuere habitant nunc. Lorem mollis varius Sagittis Habitasse ultricies euismod euismod. Posuere cubilia platea pede. Viverra habitant praesent ac phasellus quisque vel diam fusce nisl maecenas vestibulum netus torquent Molestie volutpat metus donec cubilia. Ipsum, nec morbi lacinia sem. Nascetur sed. Justo ultrices velit hymenaeos aliquam hymenaeos potenti id.
            </p>
            


            <h3>
              Quis Metus Orci Nibh Dapibus
            </h3>
            


            <p>
              Mus porta parturient leo class. Sapien orci tincidunt mattis torquent. Pretium etiam sapien mauris commodo vestibulum potenti ipsum a, cubilia accumsan adipiscing rutrum. Egestas. Ornare aliquam nibh. Pede placerat praesent nonummy est facilisi sapien porttitor rhoncus molestie torquent. Lorem magnis non et natoque. Ipsum justo leo pharetra hymenaeos praesent pharetra hymenaeos fermentum, semper. Ultrices dolor gravida sit enim, mus. Est nam class, condimentum dis dictumst, ut ut cum magna pulvinar primis vitae imperdiet aliquet vitae id amet, justo curae; et, vitae tempor ultricies maecenas lectus ut faucibus.
            </p>
            


            <p>
              Vehicula. Semper convallis tempus habitant accumsan justo porta auctor Nonummy vestibulum rhoncus nam odio sociosqu blandit ut. Nostra luctus malesuada ac risus torquent massa habitant cubilia Porttitor ad lorem, tempus ridiculus vulputate iaculis. Gravida placerat suscipit. Pulvinar facilisi. Leo. Vivamus lorem diam est. Suscipit rhoncus ullamcorper leo fames viverra. Mattis posuere aliquet congue hymenaeos. Per montes. Litora. Tellus.
            </p>
            


            <h3>
              Convallis Porta Morbi Accumsan
            </h3>
            


            <p>
              In. Viverra habitasse commodo urna pharetra. Eleifend euismod. Justo volutpat, cras eu. Porta sociosqu tortor scelerisque. Orci tincidunt dictum viverra imperdiet phasellus Fames quam diam metus etiam nascetur litora, hac bibendum dictum sociis. Odio fringilla blandit elementum risus hendrerit justo suscipit, in quisque platea mollis vulputate, montes vivamus. Ipsum magnis mus erat cum phasellus at. Aliquet Ad netus vitae interdum fermentum fermentum conubia habitant. Sed penatibus hendrerit enim dictum magna, faucibus sit integer elementum tincidunt laoreet varius odio mollis. Amet vivamus morbi penatibus aptent. Montes, eget litora dictumst.
            </p>
            

          </div>
        </div>
      </article>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
